metadata-retriever/metadata/objects/Lead_Account__c.object
<CustomObject>
    <description>Stores information on leads</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <formula>Contact__r.Address_Line_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <formula>Contact__r.Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Account.Dealer_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Assigned Dealer)</relationshipLabel>
        <relationshipName>Leads_Account_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <label>Base Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus &amp; Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMS_Contract_Number__c</fullName>
        <label>CMS Contract Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Leads_Account_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Timing__c</fullName>
        <label>Contact Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Contact)</relationshipLabel>
        <relationshipName>Leads_Account_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Rate__c</fullName>
        <label>Contract Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF( ISBLANK( Company_Account__c ) ,  IF( ISBLANK( Contact__c ) , &apos;&apos;,  Contact__r.Name ) ,  Company_Account__r.Name )</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Authority2__c</fullName>
        <label>DD Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Authority__c</fullName>
        <formula>Existing_Contract__r.Direct_Debit_Authority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Debit Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Commission__c</fullName>
        <label>Dealer Commission</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Fee__c</fullName>
        <label>Doc Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drop_off_Time__c</fullName>
        <label>Drop-off Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( ISBLANK( Contact__c ) , &apos;&apos;, IF(ISBLANK(Contact__r.Email__c),&apos;&apos;,Contact__r.Email__c))</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Flag__c</fullName>
        <description>/*
Created By Polaris Yu 2013-8-26
Function: to show how long this lead hasn&apos;t been updated
Used By: US_AU-Lead-026; US_AU-Lead-027
*/</description>
        <formula>IF(AND(NOW()-LastModifiedDate &gt;= 1, NOW()-LastModifiedDate &lt; 3)
, IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;24H Untouched&apos;)
, IF(NOW()-LastModifiedDate &gt;= 3, IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;72H Untouched&apos;)
, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Existing Contract No.</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Amount__c</fullName>
        <formula>Existing_Contract__r.Amount_Financed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Product2__c</fullName>
        <label>Financial Product</label>
        <picklist>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Maintained Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Product__c</fullName>
        <formula>TEXT(Existing_Contract__r.Finance_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Dealer__c</fullName>
        <label>Fleet Dealer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>IF( ISBLANK( Contact__c ) , &apos;&apos;, IF(ISBLANK(Contact__r.Individual_Home_Phone__c),&apos;&apos;,Contact__r.Individual_Home_Phone__c))</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>Existing_Contract__r.Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Category__c</fullName>
        <label>Interested Vehicle Category</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_150_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/*
Created By PolarisYu 2013-9-2
Function: To mark those leads auto created for EOC, will be checked when the leads created
Used By: LeadHelper
*/</description>
        <label>*Is Finance Send Email Before 150 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_15_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Finance Send Email Before 15 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_20_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Finance Send Email Before 20 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_150_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created By PolarisYu 2013-9-213
Function: To mark those leads auto created for EOC, will be checked when the leads created 
Used By: LeadHelper 
*/</description>
        <label>*Is Fleet Send Email Before 150 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_15_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fleet Send Email Before 15 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_20_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fleet Send Email Before 20 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDCL_Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Lead Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Enquiry</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempt Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Credit Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer to Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financials Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Vehicle and Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodgment_Date__c</fullName>
        <label>Lodgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Hoax / Child / Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 attempts no contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to service support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer changed their mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong / Invalid contact details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has already attended dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to maximum Credit Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service loan car not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service time not suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested (no quote)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid by Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees and Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnaround Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <label>Lost To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MB_Vehicle_Interest__c</fullName>
        <label>MB Vehicle Interest</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito Panel Van</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MB_Vehicle_Outcome__c</fullName>
        <label>MB Vehicle Outcome</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito Panel Van</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( Contact__r.RecordType.DeveloperName == &apos;Company&apos;,
IF( ISBLANK(Contact__r.Mobile__c),&apos;&apos;, Contact__r.Mobile__c),
IF( ISBLANK(Contact__r.PersonMobilePhone),&apos;&apos;, Contact__r.PersonMobilePhone)
)</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment2__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <formula>Existing_Contract__r.Monthly_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature_of_Request__c</fullName>
        <label>Nature of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key 2 Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Insurance_Policy_Number__c</fullName>
        <label>New Insurance Policy Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading__c</fullName>
        <formula>VehicleRel_No__r.Odometer_Reading__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odometer Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Fee__c</fullName>
        <label>Orig Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pick_up_Time__c</fullName>
        <label>Pick-up Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy_Inception_Date__c</fullName>
        <label>Policy Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>Contact__r.Post_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
</CustomObject>